refactor: clubId를 clubUUID로 교체